[Booking] - Removed
