# website/other/server/api/openapi.yaml
@@ -18,8 +18,6 @@ tags:
   description: All database operations required for the jobs management
 - name: News
   description: All database operations required for the news management
-- name: Booking
-  description: All database operations required for booking management
 paths:
   /volunteers:
     get:
@@ -235,36 +233,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Event'
-        "400":
-          description: Illegal input for the required operation
-        "404":
-          description: Entity with specified parameters not found
-      x-swagger-router-controller: Events
-  /events/bookSpot/{eventId}:
-    post:
-      tags:
-      - Events
-      description: Updates the required event by booking one spot and reducing the
-        correct database value
-      operationId: eventsBookSpotEventIdPOST
-      parameters:
-      - name: eventId
-        in: path
-        description: The event ID to query for
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            text/plain:
-              schema:
-                type: integer
-                format: int32
-                x-content-type: text/plain
         "400":
           description: Illegal input for the required operation
         "404":
@@ -553,54 +521,6 @@ paths:
         "404":
           description: Entity with specified parameters not found
       x-swagger-router-controller: Volunteers
-  /booking:
-    post:
-      tags:
-      - Booking
-      description: Insert booking object into database
-      operationId: bookingPOST
-      parameters:
-      - name: id_event
-        in: query
-        description: Event id
-        required: true
-        style: form
-        explode: true
-        schema:
-          type: integer
-      - name: email
-        in: query
-        description: Email
-        required: true
-        style: form
-        explode: true
-        schema:
-          type: string
-      responses:
-        "200":
-          description: OK
-        "400":
-          description: Illegal input for the required operation
-        "404":
-          description: Entity with specified parameters not found
-      callbacks:
-        updateEvent:
-          https://ripe4u.herokuapp.com/events/bookSpot/{$request.query.id_event}:
-            post:
-              requestBody:
-                description: callback payload
-                content:
-                  application/json:
-                    schema:
-                      type: string
-              responses:
-                "200":
-                  description: OK
-                "400":
-                  description: Illegal input for the required operation
-                "404":
-                  description: Entity with specified parameters not found
-      x-swagger-router-controller: Booking
 components:
   schemas:
     Volunteer:
@@ -695,8 +615,6 @@ components:
           minimum: 0
           exclusiveMinimum: false
           type: integer
-        bookable:
-          type: boolean
         category:
           type: string
           enum:
@@ -707,7 +625,6 @@ components:
           - Raccolta fondi
       example:
         image: image
-        bookable: true
         date_start: date_start
         description: description
         date_end: date_end
@@ -766,22 +683,6 @@ components:
         id: 0
         long_description: long_description
         title: title
-    Booking:
-      required:
-      - email
-      - event
-      - id
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        email:
-          type: string
-        timestamp:
-          type: string
-        event:
-          type: string
     Event_place:
       type: object
       properties:
